--- a/WebApp/src/styles/styles.scss
+++ b/WebApp/src/styles/styles.scss
@@ -1,31 +1,25 @@
-/* Variables */
-$vin-blue: #5bb7db;
-$vin-green: #60b044;
-$vin-red: #ff0000;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
-/* Styles */
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
+html,
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  line-height: 1.4em;
-  color: #4d4d4d;
-  min-width: 230px;
-  max-width: 550px;
-  margin: 0 auto;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  font-weight: 300;
+  height: 100%;
+  padding: 0;
+  margin: 0;
 }
 
-td {
-	padding: 12px;
+#app {
+  width: 100%;
+  height: 100%;
 }
 
-h2 {
-	color: $vin-blue;
+.container {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 300px auto;
+  grid-template-areas: 'sidebar timetable';
 }
-
-.savings { color: $vin-green; }
-.loss { color: $vin-red; }
-input.small { width: 46px; }
-td.fuel-savings-label { width: 175px; }
