--- a/WebApp/src/components/Timetable/Timetable.scss
+++ b/WebApp/src/components/Timetable/Timetable.scss
@@ -1,49 +1,45 @@
-$background-color: #ffffff;
-$border-color: #e0e0e0;
-$block-color: #fae2a8;
+@import '../../styles/globals';
 
 .timetable {
   display: grid;
   grid-area: 'timetable';
+  grid-template-rows: auto 1fr;
+  grid-template-columns: auto 1fr;
+  grid-template-areas: '. col-head'
+                       'row-head cells';
   border: 1px solid $border-color;
 }
 
-.day,
-.block,
-.border {
-  border: 1px solid $border-color;
-}
+.col-head,
+.row-head,
+.cells,
+.blocks {
+  display: grid;
+};
 
-.day,
-.block {
-  padding: 1em;
+.col-head > div,
+.row-head > div,
+.empty-cell,
+.cell {
+  border: 1px solid $border-color;
   background-color: $background-color;
 }
 
-.block {
-  grid-row: 1;
+.col-head > div,
+.row-head > div {
+  padding: 1em;
+}
+
+.col-head > div {
   text-align: center;
 }
 
-.day {
-  grid-column: 1;
+.cells,
+.blocks {
+  grid-area: cells;
 }
 
-.lab {
-  padding: 1em;
-  background-size: 1em;
-  background-color: $block-color;
-  background-repeat: no-repeat;
-  background-position: right top;
-  background-origin: content-box;
-  // background-image: url('./images/lab.svg');
-  border: 1px solid $border-color;
-  .name {
-    font-weight: bold;
-    font-size: 1em;
-  }
-  .room,
-  .teacher {
-    font-size: 0.8em;
-  }
+.blocks {
+  grid-gap: 2px;
+  border: 1px solid transparent;
 }
