--- a/WebApp/src/styles/styles.scss
+++ b/WebApp/src/styles/styles.scss
@@ -5,21 +5,21 @@
 }
 
 html,
-body {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-#app {
-  width: 100%;
-  height: 100%;
-}
-
+body,
+#app,
 .container {
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-columns: 300px auto;
-  grid-template-areas: 'sidebar timetable';
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.sidebar-timetable {
+  display: flex;
+  flex-wrap: nowrap;
 }
