--- a/WebApp/src/components/Timetable/TimetableBlock.scss
+++ b/WebApp/src/components/Timetable/TimetableBlock.scss
@@ -1,21 +1,24 @@
-@import '../../styles/globals';
-
 .block {
   padding: 1em;
-  background-color: $block-color;
-  border: 1px solid $block-border-color;
+  border-radius: .25em;
   .name {
+    display: inline-block;
     font-weight: bold;
     font-size: 1em;
   }
+  svg {
+    width: 1em;
+    height: 1em;
+    margin-left: .25em;
+  }
   .room,
   .teacher {
-    font-size: 0.8em;
+    font-size: .8em;
   }
 }
 
 .block.small {
-  padding: 0.7em;
+  padding: .7em;
   .room,
   .teacher {
     display: none;
@@ -26,30 +29,4 @@
   .room {
     display: none;
   }
-}
-
-.block.pale {
-  background-color: #fff7ef;
-}
-
-.block.lecture .name {
-  padding-right: 1.8em;
-  background: url('../../images/lecture.svg') no-repeat;
-}
-.block.laboratory .name {
-  padding-right: 1.4em;
-  background: url('../../images/laboratory.svg') no-repeat;
-}
-
-.block.exercise .name {
-  padding-right: 1.6em;
-  background: url('../../images/exercise.svg') no-repeat;
-}
-
-.block.lecture .name,
-.block.laboratory .name,
-.block.exercise .name {
-  display: inline-block;
-  background-position: right top;
-  background-size: auto 1em;
 }
