add margin-top to overlaping blocks

--- a/WebApp/src/styles/globals.scss
+++ b/WebApp/src/styles/globals.scss
@@ -1,8 +1,7 @@
-$background-color: #ffffff;
+$background-color: #fff;
 $border-color: #e0e0e0;
-$block-color: #fae2a8;
-$block-border-color: #d79b00;
 
+// material colors
 $red: #F44336;
 $pink: #E91E63;
 $purple: #9C27B0;
