--- a/WebApp/src/components/Timetable/TimetableBlock.scss
+++ b/WebApp/src/components/Timetable/TimetableBlock.scss
@@ -1,16 +1,19 @@
+$border-radius: .25em;
+$size: 1em;
+
 .block {
   position: relative;
-  padding: 1em;
-  border-radius: .25em;
+  padding: $size;
+  border-radius: $border-radius;
   cursor: pointer;
   .name {
     display: inline-block;
     font-weight: bold;
-    font-size: 1em;
+    font-size: $size;
   }
   svg {
-    width: 1em;
-    height: 1em;
+    width: $size;
+    height: $size;
     margin-left: .25em;
   }
   .room,
@@ -37,6 +40,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #fff;
   opacity: .4;
+  border-radius: $border-radius;
+  background-color: #fff;
 }
