block detail popup

--- a/WebApp/src/components/Sidebar/Sidebar.scss
+++ b/WebApp/src/components/Sidebar/Sidebar.scss
@@ -8,9 +8,9 @@ $sidebar-padding: 16px;
   padding: $sidebar-padding;
   border-top: 2px solid $border-color;
   margin-left: -1 * ($sidebar-width + 2 * $sidebar-padding);
-  transition: margin 0.4s ease-in;
+  transition: margin .4s ease-in;
   &.open {
     margin-left: 0;
-    transition: margin 0.4s ease-out;
+    transition: margin .4s ease-out;
   }
 }
