#27 refactor before login page

--- a/WebApp/src/components/HomePage/HomePage.scss
+++ b/WebApp/src/components/HomePage/HomePage.scss
@@ -1,14 +1,5 @@
-.home {
-  background: url('../../images/home-background.png') center no-repeat;
-  background-size: 80%;
-}
-
-.home-wrapper {
-  margin: auto;
-  padding: 4em;
+.home-content {
   text-align: center;
-  background-color: #fff;
-  box-shadow: 8px 8px 16px 8px rgba(0, 0, 0, .36);
   button {
     margin: 32px 16px 8px 16px;
   }
