--- a/WebApp/src/styles/styles.scss
+++ b/WebApp/src/styles/styles.scss
@@ -1,26 +1,42 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
-
 * {
-  font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+:root {
+    box-sizing: border-box;
+    font-size: calc(.5vw + .5em);
+}
+
+*,
+::before,
+::after {
+    box-sizing: inherit;
+}
+
+@media (min-width: 50em) {
+    :root {
+        font-size: 1.125em;
+    }
 }
 
 html,
 body,
 #app,
 .container {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .sidebar-timetable {
-  height: 100%;
-  display: flex;
-  flex-wrap: nowrap;
+    height: 100%;
+    display: flex;
+    flex-wrap: nowrap;
 }
