--- a/WebApp/src/styles/styles.scss
+++ b/WebApp/src/styles/styles.scss
@@ -3,6 +3,16 @@
     font-family: 'Roboto', sans-serif;
 }
 
+:root {
+    box-sizing: border-box;
+}
+
+*,
+::before,
+::after {
+    box-sizing: inherit;
+}
+
 html,
 body,
 #app,
