--- a/WebApp/src/components/BlockDetail/BlockDetail.scss
+++ b/WebApp/src/components/BlockDetail/BlockDetail.scss
@@ -1,5 +1,6 @@
 .block-detail {
   position: fixed;
+  z-index: 1000;
   border-radius: .25em;
   box-shadow: .5em .5em 1em .1em rgba(0, 0, 0, .2);
   background-color: #fff;
