#149 displaying selected course in colors. the rest of time table got opacity.... same thing is applied to choosing course timetable from sidebar

--- a/WebApp/src/components/Timetable/TimetableBlock.scss
+++ b/WebApp/src/components/Timetable/TimetableBlock.scss
@@ -40,7 +40,8 @@ $size: 1em;
   left: 0;
   right: 0;
   bottom: 0;
-  opacity: .4;
+  opacity: .6;
+  background: lightgray;
   border-radius: $border-radius;
   background-color: #fff;
 }
