--- a/WebApp/src/components/ElevatedBox/ElevatedBox.scss
+++ b/WebApp/src/components/ElevatedBox/ElevatedBox.scss
@@ -39,15 +39,6 @@
     color: white;
   }
   
-  .PageSwitcher__Item:first-child {
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-  }
-  .PageSwitcher__Item:last-child {
-    border-top-right-radius: 25px;
-    border-bottom-right-radius: 25px;
-  }
-  
   .FormCenter {
     margin-bottom: 100px;
   }
@@ -108,18 +99,19 @@
     color: white;
     border: none;
     outline: none;
-    border-radius: 25px;
     padding: 15px 70px;
+    padding-bottom: 10px;
     font-size: .8em;
     font-weight: 500;
+    float: right;
   }
   
   .FormField__Link {
     color: #66707D;
     text-decoration: none;
-    display: inline-block;
+    display: block;
+    margin-top: 15px;
     border-bottom: 1.5px solid #225E62;
-    padding-bottom: 5px;
   }
   
   .FormField__CheckboxLabel {
