--- a/WebApp/src/components/Notifications/NotificationPanel.scss
+++ b/WebApp/src/components/Notifications/NotificationPanel.scss
@@ -7,13 +7,16 @@
     margin-right: 20px;
 }
 
-.notification-user-photo {
+.notification-icon {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 40px;
     height: 40px;
-    background: rgba(255, 255, 255, 0.2) no-repeat center center;
+    background-color: rgba(255, 255, 255, 0.2);
     background-size: cover;
     margin-right: 20px;
-    border-radius: 100%;
+    border-radius: 100%;    
     cursor: pointer;
 }
 
