--- a/WebApp/src/components/Timetable/Timetable.scss
+++ b/WebApp/src/components/Timetable/Timetable.scss
@@ -3,7 +3,7 @@ $border-width: 1px;
 $border: $border-width solid $border-color;
 .timetable {
     width: 100%;
-    height: 100%;
+    flex: 1;
     display: grid;
     border: $border;
     grid-template-rows: auto 1fr;
