FE rdy, needs refactor

--- a/WebApp/src/styles/styles.scss
+++ b/WebApp/src/styles/styles.scss
@@ -16,14 +16,14 @@
 html,
 body,
 #app,
-.container {
+.app-container {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
 }
 
-.container {
+.app-container {
     display: flex;
     flex-direction: column;
 }
