--- a/WebApp/src/components/Toolbar/DeleteAccount/DeleteAccountModal.scss
+++ b/WebApp/src/components/Toolbar/DeleteAccount/DeleteAccountModal.scss
@@ -1,11 +1,6 @@
 .modal-window {
-  border-radius: 2px;
-  border-color: 1px solid #e0e0e0;
   color: #000;
   background-color: #fff;
-  display: "flex";
-  align-items: center;
-  justify-content: center;
   background: border-box;
 }
 
@@ -18,4 +13,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  border-radius: 2px;
+  border-color: 1px solid #e0e0e0;
+  box-shadow: 4px 4px 16px 4px rgba(0,0,0,0.36);
 }
