wrong password message added

--- a/WebApp/src/components/Toolbar/DeleteAccount/DeleteAccountModal.scss
+++ b/WebApp/src/components/Toolbar/DeleteAccount/DeleteAccountModal.scss
@@ -17,3 +17,11 @@
   border-color: 1px solid #e0e0e0;
   box-shadow: 4px 4px 16px 4px rgba(0,0,0,0.36);
 }
+
+.wrongCredentials {
+  color: red;
+}
+
+.wrongCredentials p {
+  margin: 0px 0px 32px 0px;
+}
