#228 Pagination replaced with title

--- a/WebApp/src/components/PrivacyPolicyPage/PrivacyPolicyPage.css
+++ b/WebApp/src/components/PrivacyPolicyPage/PrivacyPolicyPage.css
@@ -12,9 +12,14 @@
   }
 
   .top-bar-content {
-    width: 50%;
-    left: 40%;
+    width: 60%;
+    left: 20%;
     position: relative;
+  }
+
+  .top-bar-content.h1 {
+    position: relative;
+    align-self: center;
   }
   
   .btn {
