274_about_us_reworked * added spaces between title and paragraphs * added logos of GL and UNIZA * highlited some phrases from text

--- a/WebApp/src/components/HomePage/HomePage.scss
+++ b/WebApp/src/components/HomePage/HomePage.scss
@@ -38,6 +38,18 @@
 
 .AboutUsContainer p{
   line-height: 1.4;
+  margin-top: 2em;
+}
+
+.AboutUsLogos {
+  display: flex;
+  justify-content: center;
+  margin: 3em;
+}
+
+.AboutUsLogos img{
+  width: auto;
+  height: 115px;
 }
 
 .PageSwitcher {
