--- a/WebApp/src/components/Notifications/NotificationPanel.scss
+++ b/WebApp/src/components/Notifications/NotificationPanel.scss
@@ -86,7 +86,7 @@
 
 .notification-panel-header {
     background: #F5F7F9;
-    padding: 10px 15px;
+    padding: 10px 15px 20px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
 }
