fixing problems with fitting registration page to smaller screens

--- a/WebApp/src/components/HomePage/HomePage.scss
+++ b/WebApp/src/components/HomePage/HomePage.scss
@@ -187,9 +187,7 @@
 .logo {
   background: url('../../images/logo.png') center no-repeat;
   background-size: 40%;
-  height: 150px;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  height: 25vh;
 }
 
 
@@ -205,13 +203,28 @@
   align-items: center;
   justify-content: center;
   background-size: cover;
-  height: 600px;
+  height: 55vh;
   font-family: 'Roboto', sans-serif;
+  margin-bottom: 5vh;
+}
+
+//for smartphones and tablets
+@media screen and (max-device-width: 1024px)
+              and (min-device-width: 320px) {
+  .logo {
+    height: 150px;
+  }
+  .each-slide > div {
+    height: 250px;
+  }
 }
 
 .each-slide span {
-  padding: 20px;
-  font-size: 35px;
+  padding: 3vh;
+  font-size: 2em;
+  margin-left: 3vw;
+  margin-right: 3vw;
+  margin-top: 3vh;
   background: white;
   color: black;
   -webkit-box-shadow: 10px 10px 17px 5px rgba(0,0,0,0.25);
