Added ReCAPTCHA to login page as well

--- a/WebApp/src/components/LoginPage/LoginPage.scss
+++ b/WebApp/src/components/LoginPage/LoginPage.scss
@@ -1,3 +1,13 @@
 .wrongCredentials {
     color: red;
 }
+
+#captchaLabel {
+    display: none;
+    color: red;
+  }
+
+#catpchaText {
+    color: black;
+    margin-top: 10px;
+}
