design changes + slovak lang set for recaptcha

--- a/WebApp/src/components/LoginPage/LoginPage.scss
+++ b/WebApp/src/components/LoginPage/LoginPage.scss
@@ -10,4 +10,9 @@
 #catpchaText {
     color: black;
     margin-top: 10px;
+    font-size: 12px;
+}
+
+.FormField > .FormField__Link {
+    margin-top: 0;
 }
