Added ldap login with ldap authenticator class, changes on front end.

--- a/WebApp/src/components/HomePage/HomePage.scss
+++ b/WebApp/src/components/HomePage/HomePage.scss
@@ -156,6 +156,7 @@
   border-bottom: 1.5px solid #28515b;
   padding-bottom: 5px;
   margin-top: 20px;
+  margin-bottom: 10px;
   //font-size: 1.1em;
   cursor: pointer;
 }
