fri login page appear first

--- a/WebApp/src/components/HomePage/HomePage.scss
+++ b/WebApp/src/components/HomePage/HomePage.scss
@@ -120,6 +120,13 @@
   color: white;
 }
 
+.FormField__LabelLogin {
+  display: block;
+  margin: .9em;
+  font-size: .9em;
+  color: white;
+}
+
 .FormField__Input {
   width: 85%;
   background-color: transparent;
