--- a/WebApp/src/styles/globals.scss
+++ b/WebApp/src/styles/globals.scss
@@ -2,6 +2,7 @@ $background-color: #fff;
 $border-color: #e0e0e0;
 
 // material colors
+$white: #FFFFFF;
 $red: #F44336;
 $pink: #E91E63;
 $purple: #9C27B0;
@@ -16,3 +17,4 @@ $yellow: #FFEB3B;
 $amber: #FFC107;
 $orange: #FF9800;
 $grey: #9E9E9E;
+$black: #000000;
