--- a/WebApp/src/styles/globals.scss
+++ b/WebApp/src/styles/globals.scss
@@ -9,6 +9,7 @@ $purple: #9C27B0;
 $deep-purple: #673AB7;
 $indigo: #3F51B5;
 $blue: #2196F3;
+$DarkBlue: #28515B;
 $cyan: #00BCD4;
 $teal: #009688;
 $green: #4CAF50;
@@ -18,3 +19,6 @@ $amber: #FFC107;
 $orange: #FF9800;
 $grey: #9E9E9E;
 $black: #000000;
+
+//font
+$textFont: 'Roboto', sans-serif;
