--- a/WebApp/src/components/Announcement/AnnouncementBlock.scss
+++ b/WebApp/src/components/Announcement/AnnouncementBlock.scss
@@ -6,8 +6,8 @@
     right: 10px;
     margin-top: 30px;
     padding: 30px;
-    background-color: $darkblue;
-    border: 2px solid $darkblue;
+    background-color: #28515B;
+    border: 2px solid #28515B;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
   }
   
@@ -15,10 +15,10 @@
     display: block;
     height: auto;
     width: auto;
-    background-color: $white;
-    border: solid $white;
+    background-color: #FFFFFF;
+    border: solid #FFFFFF;
     border-width: 0 10px;
-    color: $darkblue;
+    color: #28515B;
     font-size: 18px;
     margin: -37px 0px -25px -37px;
     padding: 15px;
@@ -26,5 +26,5 @@
   }
   
   .AnnouncementText{
-    font: $textFont;
+    font: 'Roboto', sans-serif;
   }
