--- a/WebApp/src/components/Announcement/AnnouncementBlock.scss
+++ b/WebApp/src/components/Announcement/AnnouncementBlock.scss
@@ -1,13 +1,13 @@
+
 .AnnouncementDiv {
     position: relative;
     display: block;
-    top: 10px;
     left: 10px;
     right: 10px;
-    margin-top: 30px;
+    bottom: 50px;
     padding: 30px;
     background-color: #28515B;
-    border: 2px solid #28515B;
+    border: 5px solid #28515B;
     box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
   }
   
@@ -17,14 +17,14 @@
     width: auto;
     background-color: #FFFFFF;
     border: solid #FFFFFF;
-    border-width: 0 10px;
-    color: #28515B;
-    font-size: 18px;
-    margin: -37px 0px -25px -37px;
+    border-width: 10px 10px;
+    margin: -37px 0px -20px -37px;
     padding: 15px;
-    padding-left: 10px;
   }
-  
+
   .AnnouncementText{
+    text-align: justify;
+    font-size: 12px;
     font: 'Roboto', sans-serif;
+    color: #28515B;
   }
