Squashed commit of the following:
commit ed31c4aec93035f561a363cdb24b4f2af407e43c
Merge: 4ca5abe 6f49199
Author: Radovan Filický <rado.filickyp@gmail.com>
Date:   Thu Nov 10 09:43:46 2022 +0100

    Merge pull request #622 from fri-team/Stage_test

    test log

commit 6f49199f35647c81fc2a37c2946880e20f3199a8
Author: Radovan Filicky <radovan.filicky@brainit.sk>
Date:   Thu Nov 10 09:26:08 2022 +0100

    test log

commit 4ca5abe0025c6e4c91c30fa3a0cab450444f8e9e
Merge: cb3c3ba 1d12db1
Author: Radovan Filický <rado.filickyp@gmail.com>
Date:   Mon Nov 7 15:16:35 2022 +0100

    Merge pull request #616 from fri-team/594-api-call-for-subject-time-table-is-not-working

    594 api call for subject time table is not working

commit 1d12db1e60bdf5ca1fa16a7c2ada37ee95c3047e
Merge: 36aae67 43e68f5
Author: Radovan Filický <rado.filickyp@gmail.com>
Date:   Tue Nov 1 10:37:25 2022 +0100

    Merge branch '#580_course_number_unclear' into 594-api-call-for-subject-time-table-is-not-working

commit 43e68f5330b1689ff3925f77b59beb673f7c368e
Author: Radovan Filický <rado.filickyp@gmail.com>
Date:   Tue Nov 1 10:36:45 2022 +0100

    Courses dupolicit fix

    Courses were ducplicit from last year

commit 36aae67717c5ac90482841f2f3a8063c1f8629ab
Author: Radovan Filický <rado.filickyp@gmail.com>
Date:   Mon Oct 31 12:14:36 2022 +0100

    added host name to log

    Added Ldap Host name to logs

commit 6452a78ef5d0340ff0a089dafaf55dff6e20a732
Author: Radovan Filický <rado.filickyp@gmail.com>
Date:   Mon Oct 31 12:11:14 2022 +0100

    Api call fix

    Added function to get right identification number for each course code using first number of course code

commit cb3c3ba0581b78dd381a7fe5933b7154260499cf
Merge: d4157ee ea4d0b9
Author: Radovan Filický <rado.filickyp@gmail.com>
Date:   Sun Oct 30 17:29:25 2022 +0100

    Merge pull request #615 from fri-team/592_crass_when_connecting_to_ldap_fails

    592 crash when connecting to ldap fails

commit ea4d0b9af488bc0181babcfeeebcabdbb77ff325

--- a/WebApp/src/styles/globals.scss
+++ b/WebApp/src/styles/globals.scss
@@ -2,12 +2,14 @@ $background-color: #fff;
 $border-color: #e0e0e0;
 
 // material colors
+$white: #FFFFFF;
 $red: #F44336;
 $pink: #E91E63;
 $purple: #9C27B0;
 $deep-purple: #673AB7;
 $indigo: #3F51B5;
 $blue: #2196F3;
+$DarkBlue: #28515B;
 $cyan: #00BCD4;
 $teal: #009688;
 $green: #4CAF50;
@@ -16,3 +18,7 @@ $yellow: #FFEB3B;
 $amber: #FFC107;
 $orange: #FF9800;
 $grey: #9E9E9E;
+$black: #000000;
+
+//font
+$textFont: 'Roboto', sans-serif;
