login page detail change

--- a/WebApp/src/components/HomePage/HomePage.scss
+++ b/WebApp/src/components/HomePage/HomePage.scss
@@ -251,6 +251,11 @@
   font-weight: bold;
   margin-bottom: 5%;
 }
+.login_button_email:hover {
+  background-color: #2f2d2d;
+  color: white;
+  font-weight: 500;
+}
 
 .homePage_link {
   text-decoration: none;
